# thu2rcc

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.bat
.github/workflows/: build.yml
benches/: hashing_speed.rs
data/: annotated_cheat_hashes.txt  cheat_hash_list.txt  cheats.csv  known_cheats.txt  uncracked_cheat_hash_list.txt
src/: cheat_cracker.cu  lib.rs  main.rs
